# DistributionSolver

./: README.md  pyproject.toml
distributionsolver/: Home.py  utils.py
distributionsolver/distributions/: binomial.py  exponential.py  geometric.py  hypergeometric.py  negative_binomial.py  normal.py  poisson.py  uniform.py
distributionsolver/interactive_graphs/: binomial.py  exponential.py  geometric.py  hypergeometric.py  negative_binomial.py  normal.py  poisson.py  uniform.py
distributionsolver/pages/: Visualize.py
