[tool.poetry]
name = "distributionsolver"
version = "0.1.0"
description = ""
authors = ["hyperoot <hyperoot.tech@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.13.2"
streamlit = "^1.38.0"
poethepoet = "^0.28.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[tool.poe.tasks]
run = "streamlit run distributionsolver/Home.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear

]
ignore = [
    "E501", # line too long
    "C901", # too complex

]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
